[package]
name = "rudis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rudis-server"
path = "src/server.rs"
#path = "src/lib/time.rs"

[dependencies]
umask = "2.1.0"
lazy_static = "1.4.0"
libc = "0.2.153"
chrono = "0.4.37"
chrono-tz = "0.9.0"